[gd_scene load_steps=43 format=3 uid="uid://dme70nfqufwdv"]

[ext_resource type="Texture2D" uid="uid://dosr1owyvjv1l" path="res://Sprites/Tomate-removebg-preview(1).png" id="1_c1hy0"]
[ext_resource type="Script" path="res://Scripts/menu_lycee.gd" id="1_m5v58"]
[ext_resource type="FontFile" uid="uid://b0b3ahm2x6ge3" path="res://Sprites/PlanetMonsterDemoRegular.ttf" id="2_35f1d"]
[ext_resource type="Texture2D" uid="uid://t6uryoisa8kw" path="res://Sprites/coeurDeBoeuf-removebg-preview.png" id="3_jgo1c"]
[ext_resource type="Texture2D" uid="uid://bplqt03oiigma" path="res://Sprites/tomateOvale.png" id="4_ywuqc"]
[ext_resource type="Texture2D" uid="uid://bl200eyrynqys" path="res://Sprites/menu_img.png" id="5_a1atp"]
[ext_resource type="PackedScene" uid="uid://dfcygstgntw6g" path="res://Characters_scenes/door.tscn" id="6_lq2ps"]
[ext_resource type="PackedScene" uid="uid://dgwnun0memswe" path="res://Characters_scenes/player.tscn" id="7_ka4h6"]
[ext_resource type="Texture2D" uid="uid://c16bbrlfjbjgm" path="res://Sprites/vide.png" id="9_xis37"]
[ext_resource type="Texture2D" uid="uid://dkjfwuu8wnki5" path="res://Sprites/fond_sauce_tomate_4.png" id="10_qy3eq"]
[ext_resource type="Texture2D" uid="uid://vd8xglhfhsjd" path="res://Sprites/fond_sauce_tomate_3.png" id="11_1qtlg"]
[ext_resource type="Texture2D" uid="uid://chmr5g0ml0gxq" path="res://Sprites/fond_sauce_tomate_5.png" id="12_se0gb"]
[ext_resource type="Texture2D" uid="uid://cnudlc3c21ya3" path="res://Sprites/fond_sauce_tomate_1.png" id="13_wsqs1"]
[ext_resource type="Texture2D" uid="uid://b1i6rwnb3c0pr" path="res://Sprites/fond_sauce_tomate_6.png" id="14_7hhd7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0gyix"]
size = Vector2(1549, 18)

[sub_resource type="Gradient" id="Gradient_keu3e"]
offsets = PackedFloat32Array(0, 0.668831, 0.772727, 1)
colors = PackedColorArray(0.270588, 0.219608, 0.168627, 1, 0.270588, 0.219608, 0.168627, 1, 0.270588, 0.219608, 0.168627, 1, 0.270588, 0.219608, 0.168627, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qp51x"]
gradient = SubResource("Gradient_keu3e")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sky2v"]
size = Vector2(27, 319)

[sub_resource type="Gradient" id="Gradient_2fm1d"]
offsets = PackedFloat32Array(0.314935, 0.522727, 0.701299)
colors = PackedColorArray(0.462745, 0.462745, 0.462745, 0, 0, 0, 0, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_258y3"]
gradient = SubResource("Gradient_2fm1d")

[sub_resource type="AtlasTexture" id="AtlasTexture_xggvq"]
atlas = ExtResource("1_c1hy0")
region = Rect2(209, 0, 104, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3w0p"]
atlas = ExtResource("1_c1hy0")
region = Rect2(105, 0, 104, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6no"]
atlas = ExtResource("1_c1hy0")
region = Rect2(1, 0, 104, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vehq"]
atlas = ExtResource("1_c1hy0")
region = Rect2(313, 0, 104, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_ep5b2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xggvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3w0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vehq")
}],
"loop": true,
"name": &"jiggle_tomato",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_kl3wb"]
font = ExtResource("2_35f1d")
font_size = 35
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2hch"]
atlas = ExtResource("3_jgo1c")
region = Rect2(89, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk1mc"]
atlas = ExtResource("3_jgo1c")
region = Rect2(2, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3ajb"]
atlas = ExtResource("3_jgo1c")
region = Rect2(263, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nely7"]
atlas = ExtResource("3_jgo1c")
region = Rect2(176, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_dmyu8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2hch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk1mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3ajb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nely7")
}],
"loop": true,
"name": &"jiggle_coeur_boeuf",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_g7jto"]
font = ExtResource("2_35f1d")
font_size = 35
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwjd7"]
atlas = ExtResource("4_ywuqc")
region = Rect2(73, 0, 73, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pj07"]
atlas = ExtResource("4_ywuqc")
region = Rect2(0, 0, 73, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_plwmm"]
atlas = ExtResource("4_ywuqc")
region = Rect2(146, 0, 73, 51)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pk7u"]
atlas = ExtResource("4_ywuqc")
region = Rect2(219, 0, 73, 51)

[sub_resource type="SpriteFrames" id="SpriteFrames_dhjop"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwjd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pj07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plwmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pk7u")
}],
"loop": true,
"name": &"jiggly_tomato_plate",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_klmlo"]
font = ExtResource("2_35f1d")
font_size = 35
font_color = Color(0, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_bs0so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_xis37")
}, {
"duration": 1.0,
"texture": ExtResource("10_qy3eq")
}, {
"duration": 1.0,
"texture": ExtResource("11_1qtlg")
}, {
"duration": 1.0,
"texture": ExtResource("12_se0gb")
}, {
"duration": 1.0,
"texture": ExtResource("13_wsqs1")
}, {
"duration": 1.0,
"texture": ExtResource("14_7hhd7")
}],
"loop": false,
"name": &"splash",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0n0ec"]
size = Vector2(81, 101)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50rdf"]
size = Vector2(115.5, 106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydg3q"]
size = Vector2(76, 111)

[node name="Menu_Lycee" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m5v58")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -962.0
offset_top = -291.0
offset_right = 1373.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.717647, 0.819608, 0.952941, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.411
anchor_top = 0.102
anchor_right = 0.411
anchor_bottom = 0.102
offset_left = -131.472
offset_top = -49.096
offset_right = 175.528
offset_bottom = 110.904
grow_horizontal = 2
texture = ExtResource("5_a1atp")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-106, 234)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(803.5, 171)
shape = SubResource("RectangleShape2D_0gyix")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(800, 175)
scale = Vector2(6.08594, 27.5)
texture = SubResource("GradientTexture1D_qp51x")

[node name="DoorRetour" parent="." instance=ExtResource("6_lq2ps")]
z_index = 0
position = Vector2(47, 351)

[node name="Player" parent="." instance=ExtResource("7_ka4h6")]
z_index = 1
position = Vector2(122, 359)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(0, -3)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-96.5, 266.5)
shape = SubResource("RectangleShape2D_sky2v")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D2"]
position = Vector2(-96.0435, 263.333)
rotation = 1.5796
scale = Vector2(1.26315, 27.1799)
texture = SubResource("GradientTexture1D_258y3")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(1583, -4)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(-96.5, 266.5)
shape = SubResource("RectangleShape2D_sky2v")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D3"]
position = Vector2(-96.0435, 263.333)
rotation = 1.5796
scale = Vector2(1.26315, 27.1799)
texture = SubResource("GradientTexture1D_258y3")

[node name="DeriveeAnim" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(407.651, 348.75)
scale = Vector2(1.10286, 1.33125)
sprite_frames = SubResource("SpriteFrames_ep5b2")
animation = &"jiggle_tomato"
autoplay = "jiggle_tomato"
frame_progress = 0.557417
speed_scale = 1.3

[node name="Derivee" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.064
anchor_top = 0.618
anchor_right = 1.064
anchor_bottom = 0.618
offset_left = -859.728
offset_top = -121.464
offset_right = -782.728
offset_bottom = -89.464
text = "Derivee"
label_settings = SubResource("LabelSettings_kl3wb")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(771.75, 348)
scale = Vector2(1.20625, 1.3)
sprite_frames = SubResource("SpriteFrames_dmyu8")
animation = &"jiggle_coeur_boeuf"
autoplay = "jiggle_coeur_boeuf"
frame_progress = 0.388708
speed_scale = 1.3

[node name="EquSecDeg" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 95.937
anchor_top = 35.5
anchor_right = 95.937
anchor_bottom = 35.5
offset_left = -109865.0
offset_top = -22726.0
offset_right = -109632.0
offset_bottom = -22694.0
text = "Equation Second Degre"
label_settings = SubResource("LabelSettings_g7jto")

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
position = Vector2(1194.5, 346)
scale = Vector2(1.60274, 1.96078)
sprite_frames = SubResource("SpriteFrames_dhjop")
animation = &"jiggly_tomato_plate"
autoplay = "jiggly_tomato_plate"
frame_progress = 0.0345716
speed_scale = 1.2

[node name="Discriminant" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 145.0
anchor_top = 35.125
anchor_right = 145.0
anchor_bottom = 35.125
offset_left = -165960.0
offset_top = -22487.0
offset_right = -165768.0
offset_bottom = -22455.0
text = "Calcul Discriminant
"
label_settings = SubResource("LabelSettings_klmlo")

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(403, 348)
scale = Vector2(0.75, 0.697917)
sprite_frames = SubResource("SpriteFrames_bs0so")
animation = &"splash"
frame_progress = 0.80377

[node name="Area2DDerivee" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2DDerivee"]
position = Vector2(405, 351.5)
scale = Vector2(1.09524, 1.07292)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDerivee"]
position = Vector2(404.5, 333.5)
shape = SubResource("RectangleShape2D_0n0ec")

[node name="Area2DSecDeg" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2DSecDeg"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DSecDeg"]
position = Vector2(773.75, 337)
shape = SubResource("RectangleShape2D_50rdf")

[node name="Area2DDiscriminant" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2DDiscriminant"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDiscriminant"]
position = Vector2(1181, 334.5)
shape = SubResource("RectangleShape2D_ydg3q")

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(773, 358)
scale = Vector2(0.75, 0.697917)
sprite_frames = SubResource("SpriteFrames_bs0so")
animation = &"splash"
frame_progress = 0.80377

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(1180, 359)
scale = Vector2(0.75, 0.697917)
sprite_frames = SubResource("SpriteFrames_bs0so")
animation = &"splash"
frame_progress = 0.80377
